Got rid of some unnecessary things. Might delete current css files later.

--- a/Showcase.Web/App.razor
+++ b/Showcase.Web/App.razor
@@ -3,10 +3,10 @@
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
     </Found>
-    <NotFound>
+    <NotFound Context="routeData">
         <PageTitle>Not found</PageTitle>
         <LayoutView Layout="@typeof(MainLayout)">
-            <p role="alert">Sorry, there's nothing at this address.</p>
+            <p role="alert">Move along! There is nothing to see here! (Error: 404)</p>
         </LayoutView>
     </NotFound>
 </Router>
