--- a/Showcase.Web/App.razor
+++ b/Showcase.Web/App.razor
@@ -3,7 +3,7 @@
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
     </Found>
-    <NotFound Context="routeData">
+    <NotFound>
         <PageTitle>Not found</PageTitle>
         <LayoutView Layout="@typeof(MainLayout)">
             <p role="alert">Move along! There is nothing to see here! (Error: 404)</p>
