--- a/Showcase.Web/Shared/NavMenu.razor.css
+++ b/Showcase.Web/Shared/NavMenu.razor.css
@@ -1,62 +1,37 @@
-.navbar-toggler {
-    background-color: rgba(255, 255, 255, 0.1);
+nav {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    min-height: clamp(2rem, 8vh, 3rem);
+    position: relative;
+    background-image: linear-gradient(180deg, orange, yellow, transparent);
+    justify-content: space-around;
+    align-items: center;
+    padding: .5rem;
+    display: flex;
+    align-items: center;
 }
 
-.top-row {
-    height: 3.5rem;
-    background-color: rgba(0,0,0,0.4);
+.nav-link {
+    text-decoration: none;
+    text-align: center;
+    color: darkslategrey;
+    font-size: 1.65rem;
+    position: relative;
 }
 
-.navbar-brand {
-    font-size: 1.1rem;
-}
-
-.oi {
-    width: 2rem;
-    font-size: 1.1rem;
-    vertical-align: text-top;
-    top: -2px;
-}
-
-.nav-item {
-    font-size: 0.9rem;
-    padding-bottom: 0.5rem;
-}
-
-    .nav-item:first-of-type {
-        padding-top: 1rem;
+    .nav-link::after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        background-color: darkslategray;
+        bottom: 0;
+        left: 0;
+        transform: scaleX(0);
+        transition: transform .25s linear;
     }
 
-    .nav-item:last-of-type {
-        padding-bottom: 1rem;
-    }
-
-    .nav-item ::deep a {
-        color: #d7d7d7;
-        border-radius: 4px;
-        height: 3rem;
-        display: flex;
-        align-items: center;
-        line-height: 3rem;
-    }
-
-.nav-item ::deep a.active {
-    background-color: rgba(255,255,255,0.25);
-    color: white;
-}
-
-.nav-item ::deep a:hover {
-    background-color: rgba(255,255,255,0.1);
-    color: white;
-}
-
-@media (min-width: 641px) {
-    .navbar-toggler {
-        display: none;
-    }
-
-    .collapse {
-        /* Never collapse the sidebar for wide screens */
-        display: block;
-    }
-}
+        .nav-link:hover::after,
+        .nav-link:focus::after{
+            transform: scaleX(1);
+        }
