Added styliing to the active site.

--- a/Showcase.Web/Shared/NavMenu.razor
+++ b/Showcase.Web/Shared/NavMenu.razor
@@ -1,11 +1,22 @@
-﻿<nav>
-        <a class="nav-link" href="">
+﻿@inject NavigationManager navi
+
+<nav>
+        <a class="nav-link @(activeIndex == 1 ? "activated" : "")" href="" onclick="@(() => SetActiveIndex(1))">
                 Home
         </a>
-        <a class="nav-link" href="">
+        <a class="nav-link @(activeIndex == 2 ? "activated" : "")" href="" onclick="@(() => SetActiveIndex(2))">
                 Cinema
         </a>
-        <a class="nav-link" href="">
+        <a class="nav-link @(activeIndex == 3 ? "activated" : "")" href="" onclick="@(() => SetActiveIndex(3))">
                 Playground
         </a>
 </nav>
+
+@code{
+    int activeIndex = 1;
+
+    private void SetActiveIndex(int i)
+    {
+        activeIndex = i;
+    }
+}
