--- a/Showcase.Web/Shared/NavMenu.razor.css
+++ b/Showcase.Web/Shared/NavMenu.razor.css
@@ -1,10 +1,11 @@
 nav {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: auto auto auto auto auto;
+    grid-gap: 3rem;
     min-height: clamp(2rem, 8vh, 3rem);
     position: relative;
-    background-image: linear-gradient(180deg, orange, yellow, transparent);
-    justify-content: space-around;
+    background-color: #2F4F4F;
+    justify-content: center;
     align-items: center;
     padding: .5rem;
     display: flex;
@@ -14,9 +15,17 @@ nav {
 .nav-link {
     text-decoration: none;
     text-align: center;
-    color: darkslategrey;
+    color: #BFD9D9;
     font-size: 1.65rem;
     position: relative;
+}
+
+.nav-link::before {
+    content: "";
+    position: absolute;
+    width: 120%;
+    height: 150%;
+    margin: -.5rem;
 }
 
     .nav-link::after {
@@ -24,7 +33,7 @@ nav {
         position: absolute;
         width: 100%;
         height: 2px;
-        background-color: darkslategray;
+        background-color: #BFD9D9;
         bottom: 0;
         left: 0;
         transform: scaleX(0);
@@ -35,3 +44,12 @@ nav {
         .nav-link:focus::after{
             transform: scaleX(1);
         }
+
+.activated::before {
+    content: "";
+    position: absolute;
+    width: 120%;
+    height: 150%;
+    box-shadow: 0 0 0 2px #BFD9D9;
+    margin: -.5rem;
+}
