--- a/Showcase.Web/Pages/Index.razor
+++ b/Showcase.Web/Pages/Index.razor
@@ -2,6 +2,6 @@
 
 <PageTitle>Showcase</PageTitle>
 
-<h1>Hello, Welt!</h1>
+<h1>My Projects</h1>
 
-Welcome to your new app.
+<p>Welcome to the collection of my own codebase. Here I will demonstrate the work I'm doing in my freetime. Every project contains a link to it's own github repo page. Happy exploring!</p>
