--- a/Showcase.Web/Shared/NavMenu.razor
+++ b/Showcase.Web/Shared/NavMenu.razor
@@ -4,11 +4,8 @@
         <a class="nav-link @(activeIndex == 1 ? "activated" : "")" href="" onclick="@(() => SetActiveIndex(1))">
                 Home
         </a>
-        <a class="nav-link @(activeIndex == 2 ? "activated" : "")" href="" onclick="@(() => SetActiveIndex(2))">
-                Cinema
-        </a>
-        <a class="nav-link @(activeIndex == 3 ? "activated" : "")" href="" onclick="@(() => SetActiveIndex(3))">
-                Playground
+        <a class="nav-link @(activeIndex == 2 ? "activated" : "")" href="/bits" onclick="@(() => SetActiveIndex(2))">
+                Small scripts
         </a>
 </nav>
 
