Added basic project cards

--- a/Showcase.Web/Pages/Index.razor
+++ b/Showcase.Web/Pages/Index.razor
@@ -1,7 +1,10 @@
-﻿@page "/"
+﻿@page "/" 
+@page "/Showcase/"
+<!-- I have to do both routes otherwise github pages stops working. -->
 
 <PageTitle>Showcase</PageTitle>
 
 <h1>My Projects</h1>
 
-<p>Welcome to the collection of my own codebase. Here I will demonstrate the work I'm doing in my freetime. Every project contains a link to it's own github repo page. Happy exploring!</p>
+<p>Welcome to the collection of my own codebase. Here I will demonstrate the work I'm doing in my freetime. 
+    Every project contains a link to it's own github repo page. Happy exploring!</p>
