Adjusted the background and some text

--- a/Showcase.Web/Pages/Index.razor
+++ b/Showcase.Web/Pages/Index.razor
@@ -5,12 +5,16 @@
 
 <PageTitle>Showcase</PageTitle>
 
-<h1>My Projects</h1>
+<h1>Welcome!</h1>
 
 <div class="container">
-    <p>Welcome to the collection of my own codebase. Here I will demonstrate the work I'm doing in my freetime. 
-            Every project contains a link to it's own github repo page. Happy exploring!</p>
+    <p>
+        My name is György Turbék, a C# developer with a strong focus on the WPF framework. 
+        I have a keen interest in the .NET Core framework and am currently expanding my skill set by learning Blazor and building this website. 
+        Below, you'll find a showcase of some of my projects that demonstrate my capabilities and growth as a developer.
+    </p>
 </div>
+
 
 <div class="project-container">
     <ProjectCard
@@ -26,11 +30,3 @@
         Description="This is a brief description of project 2."
         GitHubUrl="https://github.com/user/project2" />
 </div>
-
-<style>
-    .project-container {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-</style>
