--- a/Showcase.Web/Pages/Index.razor.css
+++ b/Showcase.Web/Pages/Index.razor.css
@@ -1,9 +1,23 @@
-﻿h1{
-    font-size: 2rem;
+﻿h1 {
+    font-size: 3rem;
+    text-align: center;
+    color: var(--accent-color);
+    margin-top: 2rem;
+    margin-bottom: 1rem;
 }
 
-.container{
-    margin: 30px auto;
+.container {
+    margin: 0 auto;
+    max-width: 1200px;
+    padding: 0 1rem;
+    text-align: center;
+}
+
+.project-container {
+    display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    width: 50%;
+    gap: 2rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
