--- a/Showcase.Web/Shared/Components/ProjectCard.razor.css
+++ b/Showcase.Web/Shared/Components/ProjectCard.razor.css
@@ -22,7 +22,7 @@
 
 .image-container {
     width: auto;
-    height: 300px;
+    height: 15rem;
     display: flex;
     align-items: center;
     justify-content: center;
