--- a/Showcase.Web/wwwroot/css/app.css
+++ b/Showcase.Web/wwwroot/css/app.css
@@ -1,8 +1,10 @@
 ﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
 html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    padding: 0;
+    font-family: 'Roboto', sans-serif;
+    line-height: 1.6;
+    color: #E0E0E0;
+    background-color: #1F1F1F;
     margin: 0;
 }
 
