--- a/Showcase.Web/Shared/Components/ProjectCard.razor.css
+++ b/Showcase.Web/Shared/Components/ProjectCard.razor.css
@@ -1,17 +1,80 @@
 ﻿.project-card {
     --background-color: #323240;
     --accent-color: #DCF235;
-    background-color: var(--background-color);
+    background-size: cover;
+    background-position: center;
     border-radius: 7px;
-    padding: 1rem;
     box-shadow: 0 0 0 0.133rem var(--accent-color);
-    max-width: 20rem;
+    max-width: 25rem;
+    height: 30rem;
     margin: 1rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     text-align: center;
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+    transition: transform 0.3s ease-in-out;
 }
+
+    .project-card:hover {
+        transform: scale(1.05);
+    }
+
+    .project-card:hover {
+        transform: scale(1.05);
+    }
+
+.overlay {
+    width: 100%;
+    height: 100%;
+    background: 
+        linear-gradient(0deg, 
+            rgba(31, 31, 31, .95) 0rem, 
+            rgba(31, 31, 31, .95) 13rem, 
+            rgba(31, 31, 31, 0.66) 18rem, 
+            rgba(31, 31, 31, 0.1) 23rem,
+            rgba(31, 31, 31, 0) 100%);
+    position: absolute;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.project-title {
+    font-size: 1.5rem;
+    color: var(--accent-color);
+    margin-top: 17rem;
+    margin-bottom: 1rem;
+}
+
+.project-description {
+    font-size: 1rem;
+    color: #E0E0E0;
+    margin-bottom: 1rem;
+}
+
+.button-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 1rem;
+}
+
+.project-link,
+.download-link {
+    font-size: 1rem;
+    color: var(--accent-color);
+    text-decoration: none;
+}
+
+    .project-link:hover,
+    .download-link:hover {
+        text-decoration: underline;
+    }
 
 .project-image {
     width: 100%;
@@ -27,13 +90,6 @@
     align-items: center;
     justify-content: center;
     overflow: hidden;
-}
-
-.project-title {
-    font-size: 1.65rem;
-    color: var(--accent-color);
-    margin-top: 0.75rem;
-    margin-bottom: 0.5rem;
 }
 
 .project-description {
