--- a/Showcase.Web/Shared/Components/ProjectCard.razor.css
+++ b/Showcase.Web/Shared/Components/ProjectCard.razor.css
@@ -1,8 +1,6 @@
 ﻿.project-card {
     --background-color: #323240;
     --accent-color: #DCF235;
-    background-size: cover;
-    background-position: center;
     border-radius: 7px;
     box-shadow: 0 0 0 0.133rem var(--accent-color);
     max-width: 25rem;
@@ -15,15 +13,23 @@
     width: 100%;
     position: relative;
     overflow: hidden;
-    transition: transform 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
 }
 
     .project-card:hover {
-        transform: scale(1.05);
+        background-size: 110%;
     }
 
-    .project-card:hover {
-        transform: scale(1.05);
+    .project-card::before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-image: inherit;
+        background-size: cover;
+        background-position: center;
+        z-index: -1;
+        transition: all 0.3s ease-in-out;
     }
 
 .overlay {
@@ -91,6 +97,21 @@
     justify-content: center;
     overflow: hidden;
 }
+
+.project-image-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    transition: transform 0.5s ease-in-out;
+}
+
+    .project-card:hover .project-image-container {
+        transform: scale(1.1);
+    }
 
 .project-description {
     font-size: 1rem;
