--- a/Showcase.Web/Shared/Components/ProjectCard.razor
+++ b/Showcase.Web/Shared/Components/ProjectCard.razor
@@ -10,7 +10,7 @@
             @if (!string.IsNullOrEmpty(DownloadUrl))
             {
                 <a class="download-link" href="@DownloadUrl" target="_blank">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" fill="currentColor">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
                             <path d="M12 16l4-5h-3V4h-2v7H8z"></path>
                             <path d="M21 18v2H3v-2H1v4h22v-4z"></path>
                         </svg>                
