Smaller changes in project card

--- a/Showcase.Web/Pages/Index.razor
+++ b/Showcase.Web/Pages/Index.razor
@@ -18,11 +18,11 @@
 
 <div class="project-container">
     <ProjectCard
-        ImageUrl="/icon-192.png"
+        ImageUrl="/Pictures/Listen2Me_portfolio.jpg"
         Title="Listen2Me"
         Description="My own music player application, utilizing an SqLite database."
         GitHubUrl="https://github.com/profgyuri/Listen2MeRefined" 
-        DownloadUrl="https://github.com/profgyuri/Listen2MeRefined/releases/"/>
+        IsDownloadButtonVisible="true"/>
 
     <ProjectCard
         ImageUrl="e:\!Programming\en.jpg"
