--- a/Showcase.Web/Shared/Components/ProjectCard.razor.css
+++ b/Showcase.Web/Shared/Components/ProjectCard.razor.css
@@ -13,12 +13,8 @@
     width: 100%;
     position: relative;
     overflow: hidden;
-    transition: all 0.3s ease-in-out;
+    transition: all 0.5s ease-in-out;
 }
-
-    .project-card:hover {
-        background-size: 110%;
-    }
 
     .project-card::before {
         content: "";
@@ -29,7 +25,7 @@
         background-size: cover;
         background-position: center;
         z-index: -1;
-        transition: all 0.3s ease-in-out;
+        transition: all 0.5s ease-in-out;
     }
 
 .overlay {
@@ -37,11 +33,11 @@
     height: 100%;
     background: 
         linear-gradient(0deg, 
-            rgba(31, 31, 31, .95) 0rem, 
-            rgba(31, 31, 31, .95) 13rem, 
+            rgba(31, 31, 31, 1) 0rem, 
+            rgba(31, 31, 31, 1) 13rem, 
             rgba(31, 31, 31, 0.66) 18rem, 
             rgba(31, 31, 31, 0.1) 23rem,
-            rgba(31, 31, 31, 0) 100%);
+            rgba(31, 31, 31, 0.1) 100%);
     position: absolute;
     top: 0;
     display: flex;
@@ -50,14 +46,14 @@
 }
 
 .project-title {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     color: var(--accent-color);
     margin-top: 17rem;
     margin-bottom: 1rem;
 }
 
 .project-description {
-    font-size: 1rem;
+    font-size: 1.5rem;
     color: #E0E0E0;
     margin-bottom: 1rem;
 }
@@ -110,7 +106,7 @@
 }
 
     .project-card:hover .project-image-container {
-        transform: scale(1.1);
+        transform: scale(1.05);
     }
 
 .project-description {
