Added projects and improved css

--- a/Showcase.Web/Pages/Index.razor
+++ b/Showcase.Web/Pages/Index.razor
@@ -20,13 +20,35 @@
     <ProjectCard
         ImageUrl="/Pictures/Listen2Me_portfolio.jpg"
         Title="Listen2Me"
-        Description="My own music player application, utilizing an SqLite database."
+        Description="My flagship project, a music player application under non-stop development, including a ton of features."
         GitHubUrl="https://github.com/profgyuri/Listen2MeRefined" 
         IsDownloadButtonVisible="true"/>
 
     <ProjectCard
-        ImageUrl="e:\!Programming\en.jpg"
-        Title="Prime Number Speed Test"
-        Description="This is a brief description of project 2."
-        GitHubUrl="https://github.com/user/project2" />
+        ImageUrl="/Pictures/WordCounter_portfolio.jpg"
+        Title="Word Counter"
+        Description="Counts the number of occurances of the words in a file, and sorts them in descending order."
+        GitHubUrl="https://github.com/profgyuri/WordCounter"
+        IsDownloadButtonVisible="true"/>
+
+    <ProjectCard
+        ImageUrl="/Pictures/PrimeSpeedTest_portfolio.jpg"
+        Title="Language Speeds"
+        Description="Comparing 6 programming languages in running time, using a prime number calculating algorithhm."
+        GitHubUrl="https://github.com/profgyuri/PrimeSpeedTest"
+        IsDownloadButtonVisible="false"/>
+
+    <ProjectCard
+        ImageUrl="/Pictures/NetworkMonitor_portfolio.jpg"
+        Title="Network Monitor"
+        Description="Displays some basic information about the system's internet usage since booting."
+        GitHubUrl="https://github.com/profgyuri/NetworkMonitor"
+        IsDownloadButtonVisible="true"/>
+
+    <ProjectCard
+        ImageUrl="/Pictures/DatabaseFaker_portfolio.jpg"
+        Title="Database Faker"
+        Description="Filles an MSSQL database table with fake data for practicing purposes."
+        GitHubUrl="https://github.com/profgyuri/DatabaseFaker"
+        IsDownloadButtonVisible="false"/>
 </div>
