--- a/Showcase.Web/Shared/Components/ProjectCard.razor.css
+++ b/Showcase.Web/Shared/Components/ProjectCard.razor.css
@@ -3,7 +3,7 @@
     --accent-color: #DCF235;
     border-radius: 7px;
     box-shadow: 0 0 0 0.133rem var(--accent-color);
-    max-width: 25rem;
+    max-width: 23rem;
     height: 30rem;
     margin: 1rem;
     display: flex;
@@ -36,7 +36,7 @@
             rgba(31, 31, 31, 1) 0rem, 
             rgba(31, 31, 31, 1) 13rem, 
             rgba(31, 31, 31, 0.66) 18rem, 
-            rgba(31, 31, 31, 0.1) 23rem,
+            rgba(31, 31, 31, 0.5) 25rem,
             rgba(31, 31, 31, 0.1) 100%);
     position: absolute;
     top: 0;
@@ -49,13 +49,15 @@
     font-size: 1.8rem;
     color: var(--accent-color);
     margin-top: 17rem;
-    margin-bottom: 1rem;
+    margin-bottom: 0;
 }
 
 .project-description {
     font-size: 1.5rem;
     color: #E0E0E0;
     margin-bottom: 1rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
 }
 
 .button-container {
