--- a/Showcase.Web/Pages/Bits.razor
+++ b/Showcase.Web/Pages/Bits.razor
@@ -1,6 +1,6 @@
 ﻿@page "/bits/"
 
-<h3>Bits</h3>
+<h3 style="margin:2rem">There is nothing here at the moment, but it will change soon 😉</h3>
 
 @code {
 
