Trying to resolve the pictures that are not showing correctly

--- a/Showcase.Web/Pages/Index.razor
+++ b/Showcase.Web/Pages/Index.razor
@@ -20,42 +20,42 @@
 
 <div class="project-container">
     <ProjectCard
-        ImageUrl="/Pictures/Listen2Me_portfolio.jpg"
+        ImageUrl="./Pictures/Listen2Me_portfolio.jpg"
         Title="Listen2Me"
         Description="My flagship project, a music player application under non-stop development, including a ton of features."
         GitHubUrl="https://github.com/profgyuri/Listen2MeRefined" 
         IsDownloadButtonVisible="true"/>
 
     <ProjectCard
-        ImageUrl="/Pictures/WordCounter_portfolio.jpg"
+        ImageUrl="./Pictures/WordCounter_portfolio.jpg"
         Title="Word Counter"
         Description="Counts the number of occurances of the words in a file, and sorts them in descending order."
         GitHubUrl="https://github.com/profgyuri/WordCounter"
         IsDownloadButtonVisible="true"/>
 
     <ProjectCard
-        ImageUrl="/Pictures/PrimeSpeedTest_portfolio.jpg"
+        ImageUrl="./Pictures/PrimeSpeedTest_portfolio.jpg"
         Title="Language Speeds"
         Description="Comparing 6 programming languages in running time, using a prime number calculating algorithhm."
         GitHubUrl="https://github.com/profgyuri/PrimeSpeedTest"
         IsDownloadButtonVisible="false"/>
 
     <ProjectCard
-        ImageUrl="/Pictures/NetworkMonitor_portfolio.jpg"
+        ImageUrl="./Pictures/NetworkMonitor_portfolio.jpg"
         Title="Network Monitor"
         Description="Displays some basic information about the system's internet usage since booting."
         GitHubUrl="https://github.com/profgyuri/NetworkMonitor"
         IsDownloadButtonVisible="true"/>
 
     <ProjectCard
-        ImageUrl="/Pictures/DatabaseFaker_portfolio.jpg"
+        ImageUrl="./Pictures/DatabaseFaker_portfolio.jpg"
         Title="Database Faker"
         Description="Filles an MSSQL database table with fake data for practicing purposes."
         GitHubUrl="https://github.com/profgyuri/DatabaseFaker"
         IsDownloadButtonVisible="false"/>
 
     <ProjectCard
-        ImageUrl="/Pictures/ProjectDashboard_portfolio.jpg"
+        ImageUrl="./Pictures/ProjectDashboard_portfolio.jpg"
         Title="Project Dashboard"
         Description="A centralized place for my projects to open solution files in different IDEs, and run their executables."
         GitHubUrl="https://github.com/profgyuri/ProjectDashboard"
