--- a/Showcase.Web/Pages/Index.razor.css
+++ b/Showcase.Web/Pages/Index.razor.css
@@ -105,3 +105,16 @@
         background-color: #292937;
         color: #BAD030;
     }
+
+@media (max-width: 767px) {
+    .contact-buttons {
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .email-container {
+        flex-direction: column;
+        align-items: center;
+        margin-left: 0;
+    }
+}
