Added maze generator and xkcd project cards

--- a/Showcase.Web/Pages/Index.razor
+++ b/Showcase.Web/Pages/Index.razor
@@ -60,6 +60,20 @@
         Description="A centralized place for my projects to open solution files in different IDEs, and run their executables."
         GitHubUrl="https://github.com/profgyuri/ProjectDashboard"
         IsDownloadButtonVisible="false"/>
+
+    <ProjectCard
+        ImageUrl="./Pictures/maze.jpg"
+        Title="Maze Generator"
+        Description="Generate and even solve mazes of almost any size!"
+        GitHubUrl="https://github.com/profgyuri/MazeGenerator"
+        IsDownloadButtonVisible="true"/>
+
+    <ProjectCard
+        ImageUrl="./Pictures/xkcd.jpg"
+        Title="Xkcd Comics"
+        Description="Retrieve some comics about science using xkcd's public api!"
+        GitHubUrl="https://github.com/profgyuri/XkcdComics"
+        IsDownloadButtonVisible="false"/>
 </div>
 
 <div class="contact-section">
