Added maze generator to the demos page

--- a/Showcase.Web/Shared/NavMenu.razor
+++ b/Showcase.Web/Shared/NavMenu.razor
@@ -4,7 +4,10 @@
         <a class="nav-link @(activeIndex == 1 ? "activated" : "")" href="/Showcase/" onclick="@(() => SetActiveIndex(1))">
                 Home
         </a>
-        <a class="nav-link no-wrap @(activeIndex == 2 ? "activated" : "")" href="/Showcase/bits/" onclick="@(() => SetActiveIndex(2))">
+        <a class="nav-link no-wrap @(activeIndex == 2 ? "activated" : "")" href="/Showcase/demos/" onclick="@(() => SetActiveIndex(2))">
+                Demos
+        </a>
+        <a class="nav-link no-wrap @(activeIndex == 3 ? "activated" : "")" href="/Showcase/bits/" onclick="@(() => SetActiveIndex(3))">
                 Small scripts
         </a>
 </nav>
