--- a/Showcase.Web/Pages/German.razor
+++ b/Showcase.Web/Pages/German.razor
@@ -77,7 +77,7 @@
         { "sich amüsieren (AKK)", "über" },
         { "traurig sein (AKK)", "über" },
         { "wütend sein (AKK, event or situation)", "über" },
-        { "sich freuen (AKK, already happend)", "über" },
+        { "sich freuen (AKK, already happened)", "über" },
         { "sich ärgern (AKK)", "über" },
         { "sich wundern (AKK)", "über" },
         { "glücklich sein (AKK)", "über" },
