Answer is now case independent

--- a/Showcase.Web/Pages/German.razor
+++ b/Showcase.Web/Pages/German.razor
@@ -112,14 +112,21 @@
     {
         var prepositions = verbsWithPrepositions.Values.ToHashSet();
 
-        if (string.IsNullOrEmpty(userPreposition) || !prepositions.Contains(userPreposition))
+        if (string.IsNullOrEmpty(userPreposition))
+        {
+            return;
+        }
+
+        var guess = userPreposition.ToLower();
+
+        if (!prepositions.Contains(guess))
         {
             feedbackMessage = "";
             disableNext = true;
             return;
         }
 
-        if (userPreposition == verbsWithPrepositions[currentVerb])
+        if (guess == verbsWithPrepositions[currentVerb])
         {
             feedbackMessage = "Richtig!";
             disableNext = false;
