Hopefully fixed some rendering inconsistencies

--- a/Showcase.Web/Pages/German.razor
+++ b/Showcase.Web/Pages/German.razor
@@ -64,6 +64,7 @@
         { "wütend sein (AKK, person or object)", "auf" },
         { "sich freuen (AKK, will happen soon)", "auf" },
         { "hoffen (AKK)", "auf" },
+        { "hören (AKK)", "auf" },
         { "solz sein (AKK)", "auf" },
         { "aufpassen (AKK)", "auf" },
         { "warten (AKK)", "auf" },
